--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -19,7 +19,7 @@
         Requests
       </ion-segment-button>
       <ion-segment-button value="all-my-responses" (click)="retrievePriceResponses('ORDER_PRICE_CHECK_APPROVED')">
-        Responses
+        Price Approved
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
